tests/custom-5.5.1/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.5.1-noncompliant
policies:
  - ../../../kyverno-policies/custom-5.5.1.yaml
resources:
  - serviceaccount.yaml
results:
  - policy: custom-5-5-1-iam-authenticator
    rule: check-iam-authenticator
    resources:
      - noncompliant-sa
    kind: ServiceAccount
    result: fail
